kubernetes/main/apps/database/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.g-eye.io
spec:
  ingressClassName: internal
  rules:
    - host: emqx.g-eye.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
